# cal2prompt

./: .codecov.yml  .gitignore  .goreleaser.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
.github/: renovate.json
.github/actions/release/: action.yml
.github/workflows/: build-test.yml  ci.yml  tagpr.yml
docs/: setup-cli-auth.md  setup-oauth.md
docs/gif/: use-case-cli.tape  use-case-mcp-insert_calendar_event.tape  use-case-mcp.tape
src/: main.rs
src/config/: error.rs  mod.rs
src/config/templates/: google.rs
src/core/: cal2prompt.rs  event.rs  mod.rs  template.rs
src/core/mcp/: tools.json
src/google/: mod.rs  oauth.rs
src/google/calendar/: client.rs  model.rs  service.rs
src/mcp/: handler.rs  mod.rs  stdio.rs  tool_schemas.rs
src/shared/utils/: date.rs  mod.rs  path.rs
